--- a/.css/style.css
+++ b/.css/style.css
@@ -77,7 +77,8 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -114,7 +115,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -220,9 +222,9 @@ select {
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type=button],
-[type=reset],
-[type=submit] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
@@ -230,9 +232,9 @@ button,
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -241,9 +243,9 @@ button::-moz-focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -261,7 +263,8 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -293,9 +296,10 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -304,8 +308,8 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -313,7 +317,7 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type=search] {
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -323,7 +327,7 @@ textarea {
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type=search]::-webkit-search-decoration {
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -371,7 +375,8 @@ template {
 }
 
 .button {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 225px;
   height: 60px;
   background-color: #5474fd;
@@ -404,12 +409,23 @@ template {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .BHROMAON .conteiner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 .BHROMAON .conteiner .title_BHROMAON {
   color: #ffffff;
   font-family: "Josefin Sans";
@@ -418,6 +434,7 @@ template {
   line-height: 26px;
   margin-top: 265px;
 }
+
 .BHROMAON .conteiner .subtitle_BHROMAON {
   color: #ffffff;
   font-family: "Josefin Sans";
@@ -428,13 +445,25 @@ template {
   line-height: 26px;
   margin: 15px 0 50px;
 }
+
 .BHROMAON .conteiner .formBtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
+
 .BHROMAON .conteiner .formBtn .search .search_form {
   text-align: center;
   font-family: "Josefin Sans";
@@ -446,11 +475,19 @@ template {
   min-height: 60px;
   border: none;
 }
+
 .BHROMAON .conteiner .formBtn .button_BHROMAON {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 150px;
   height: 62px;
   border: 2px solid #fff;
@@ -462,20 +499,24 @@ template {
   margin: 25px 0;
   padding: 15px;
 }
+
 .BHROMAON .conteiner .formBtn .s {
   margin-right: 10px;
 }
+
 .BHROMAON .conteiner .formBtn .button:hover {
   width: 150px;
   height: 62px;
   color: #000;
   background-color: #2e408d;
 }
+
 .BHROMAON .conteiner .formBtn .button:active {
   color: #000;
   background-color: #fd6d54;
   cursor: pointer;
 }
+
 .BHROMAON .conteiner .scroll_Text {
   color: #ffffff;
   font-family: "Josefin Sans";
@@ -484,25 +525,38 @@ template {
   line-height: 26px;
   margin-top: 120px;
 }
+
 .BHROMAON .conteiner .scroll {
   margin-bottom: 160px;
 }
 
 .menu {
   background-color: #5474fd;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 9999;
 }
+
 .menu .conteiner {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 33px;
 }
+
 .menu .conteiner .namePage {
   color: #ffffff;
   font-family: "Josefin Sans";
@@ -510,6 +564,7 @@ template {
   font-weight: 700;
   line-height: 26px;
 }
+
 .menu .conteiner .menu_list a {
   color: #ffffff;
   font-family: "Aleo";
@@ -520,12 +575,14 @@ template {
   padding-left: 42px;
   text-decoration: none;
 }
+
 .menu .conteiner .menu_list a:hover {
   color: #e4fd54;
 }
 
 .button {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 225px;
   height: 60px;
   background-color: #5474fd;
@@ -555,14 +612,24 @@ template {
   background-size: cover;
   padding: 120px 30px;
 }
+
 .WhyChooseUs .row_colums_WhyChooseUs {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
+
 .WhyChooseUs .row_colums_WhyChooseUs .column1_WhyChooseUs {
-  flex: 1 1 50%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
 }
+
 .WhyChooseUs .row_colums_WhyChooseUs .column1_WhyChooseUs .title_WhyChooseUs {
   color: #ffffff;
   font-family: "Aleo";
@@ -571,6 +638,7 @@ template {
   line-height: 26px;
   margin-bottom: 60px;
 }
+
 .WhyChooseUs .row_colums_WhyChooseUs .column1_WhyChooseUs .desc_WhyChooseUs {
   color: #e8e8e8;
   font-family: "Josefin Sans";
@@ -579,21 +647,34 @@ template {
   line-height: 26px;
   margin: 62px 0 48px 0;
 }
+
 .WhyChooseUs .row_colums_WhyChooseUs .column1_WhyChooseUs .button_WhyChooseUs {
   width: 225px;
   height: 60px;
 }
+
 .WhyChooseUs .row_colums_WhyChooseUs .column2_WhyChooseUs {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  flex: 1 1 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
 }
+
 .WhyChooseUs .row_colums_WhyChooseUs .column2_WhyChooseUs .IMGcolumn1 img {
   padding-right: 100px;
 }
+
 .WhyChooseUs .row_colums_WhyChooseUs .column2_WhyChooseUs .IMGcolumn2 img {
-  padding-right: 30px;
+  margin-right: 30px;
 }
 
 .arcsIcons {
@@ -601,23 +682,42 @@ template {
   padding: 50px 0 80px;
   text-align: center;
 }
+
 .arcsIcons .conteiner {
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 20px;
 }
+
 .arcsIcons .conteiner .content_arcsIcons_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
+
 .arcsIcons .conteiner .content_arcsIcons_row .part {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  flex: 1 1 30%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 30%;
+          flex: 1 1 30%;
 }
+
 .arcsIcons .conteiner .content_arcsIcons_row span {
   color: #e8e8e8;
   font-family: "Aleo";
@@ -635,22 +735,34 @@ template {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .articleL .conteiner {
   padding: 230px 0px 100px 30px;
 }
+
 .articleL .conteiner .content_row_articleL {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .articleL .conteiner .content_row_articleL .emptiness_articleL {
-  flex: 1 1 50%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
 }
+
 .articleL .conteiner .content_row_articleL .explain_articleL {
-  flex: 1 1 50%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
   background-color: #232323;
   opacity: 0.9;
   padding: 30px;
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
+
 .articleL .conteiner .content_row_articleL .explain_articleL .subtitle_articleL {
   color: #e8e8e8;
   font-family: "Josefin Sans";
@@ -659,6 +771,7 @@ template {
   line-height: 26px;
   text-align: left;
 }
+
 .articleL .conteiner .content_row_articleL .explain_articleL .title_articleL {
   color: #ffffff;
   font-family: "Josefin Sans";
@@ -667,6 +780,7 @@ template {
   line-height: 26px;
   padding: 30px 0;
 }
+
 .articleL .conteiner .content_row_articleL .explain_articleL .desc_articleL {
   color: #e8e8e8;
   font-family: "Josefin Sans";
@@ -683,22 +797,34 @@ template {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .articleR .conteiner {
   padding: 230px 30px 100px 0;
 }
+
 .articleR .conteiner .content_row_articleR {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .articleR .conteiner .content_row_articleR .emptiness_articleR {
-  flex: 1 1 50%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
 }
+
 .articleR .conteiner .content_row_articleR .explain_articleR {
-  flex: 1 1 50%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
   background-color: #232323;
   opacity: 0.9;
   padding: 30px;
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
+
 .articleR .conteiner .content_row_articleR .explain_articleR .subtitle_articleR {
   color: #e8e8e8;
   font-family: "Josefin Sans";
@@ -707,6 +833,7 @@ template {
   line-height: 26px;
   text-align: left;
 }
+
 .articleR .conteiner .content_row_articleR .explain_articleR .title_articleR {
   color: #ffffff;
   font-family: "Josefin Sans";
@@ -715,6 +842,7 @@ template {
   line-height: 26px;
   padding: 30px 0;
 }
+
 .articleR .conteiner .content_row_articleR .explain_articleR .desc_articleR {
   color: #e8e8e8;
   font-family: "Josefin Sans";
@@ -728,9 +856,11 @@ template {
   background-size: cover;
   padding: 120px 0 200px;
 }
+
 .whatOurTouristSay .conteiner {
   padding: 0 30px;
 }
+
 .whatOurTouristSay .conteiner .title_whatOurTouristSay {
   color: #ffffff;
   font-family: "Aleo";
@@ -738,21 +868,32 @@ template {
   margin-bottom: 95px;
   text-align: center;
 }
+
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column1_whatOurTouristSay {
-  flex: 1 1 40%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 40%;
+          flex: 1 1 40%;
 }
+
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column1_whatOurTouristSay img {
   width: 100%;
   height: 100%;
 }
+
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column2_whatOurTouristSay {
-  flex: 1 1 60%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 60%;
+          flex: 1 1 60%;
   background: #333;
   padding: 50px 60px;
 }
+
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column2_whatOurTouristSay .subtitle_whatOurTouristSay {
   color: #e8e8e8;
   font-family: "Josefin Sans";
@@ -762,6 +903,7 @@ template {
   text-align: left;
   margin-bottom: 40px;
 }
+
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column2_whatOurTouristSay .desc_whatOurTouristSay {
   color: #e8e8e8;
   font-family: "Josefin Sans";
@@ -775,10 +917,12 @@ template {
   padding: 120px 0 50px;
   text-align: center;
 }
+
 .socialLinks .conteiner {
   max-width: 200px;
   margin: 0 auto;
 }
+
 .socialLinks .conteiner .title_socialLinks {
   color: #ffffff;
   font-family: "Josefin Sans";
@@ -788,6 +932,7 @@ template {
   letter-spacing: 3.36px;
   margin-bottom: 15px;
 }
+
 .socialLinks .conteiner .subtitle_socialLinks {
   color: #ffffff;
   font-family: "Josefin Sans";
@@ -797,10 +942,15 @@ template {
   letter-spacing: 1.1px;
   margin-bottom: 30px;
 }
+
 .socialLinks .conteiner .social_links {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
+
 .socialLinks .conteiner .logo a svg:hover #facebook,
 .socialLinks .conteiner .logo a svg:hover #twitter,
 .socialLinks .conteiner .logo a svg:hover #linkedin,
@@ -813,5 +963,3 @@ template {
   max-width: 1200px;
   margin: 0 auto;
 }
-
-/*# sourceMappingURL=style.css.map */
