--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "button.scss";
 @import "BHROMAON.scss";
 @import "menu.scss";
+@import "burger.scss";
 @import "WhyChooseUs.scss";
 @import "arcsIcons.scss";
 @import "articleL.scss";
