--- a/.css/menu.css
+++ b/.css/menu.css
@@ -9,10 +9,40 @@
   z-index: 9999;
 }
 
+@media (max-width: 795px) {
+  .menu .burger {
+    display: block;
+  }
+  .menu .menu_list {
+    position: fixed;
+    top: 100px;
+    left: 50%;
+    width: 100%;
+    height: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    background-color: #d6d6d1;
+    -webkit-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+  }
+  .menu .menu_list a {
+    font-size: 25px;
+    line-height: 35px;
+  }
+}
+
 .menu .conteiner {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -25,7 +55,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 33px;
+  padding: 33px 33px 23px 33px;
 }
 
 .menu .conteiner .namePage {
