--- a/css/style.css
+++ b/css/style.css
@@ -494,14 +494,34 @@ template {
   top: 0;
   z-index: 9999;
 }
+@media (max-width: 795px) {
+  .menu .burger {
+    display: block;
+  }
+  .menu .menu_list {
+    position: fixed;
+    top: 100px;
+    left: 50%;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: #d6d6d1;
+    transition: all 0.5s ease 0s;
+  }
+  .menu .menu_list a {
+    font-size: 25px;
+    line-height: 35px;
+  }
+}
 .menu .conteiner {
-  position: sticky;
-  top: 0;
   display: flex;
   flex-direction: row;
   align-content: center;
   justify-content: space-between;
-  padding: 33px;
+  padding: 33px 33px 23px 33px;
 }
 .menu .conteiner .namePage {
   color: #ffffff;
@@ -522,6 +542,53 @@ template {
 }
 .menu .conteiner .menu_list a:hover {
   color: #e4fd54;
+}
+
+.burger {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  transition: 0.3s ease;
+  height: 50px;
+}
+.burger:hover .bar {
+  box-shadow: 1px 1px 7px 1px #000;
+}
+.burger .bar {
+  width: 45px;
+  height: 10px;
+  background: #fff;
+  box-shadow: 1px 1px 3px #000;
+  border-radius: 2px;
+  transition: 0.4s ease;
+}
+.burger .bar:not(:first-child) {
+  margin-top: 10px;
+}
+
+#check-menu {
+  opacity: 0;
+}
+
+#check-menu:checked + .burger {
+  transform: translate(-50%, -50%) rotatey(180deg);
+}
+#check-menu:checked + .burger .bar {
+  transform: rotatey(180deg) rotatex(360deg);
+}
+#check-menu:checked + .burger .bar:first-child {
+  transform: rotate(-45deg);
+  margin-top: 20px;
+}
+#check-menu:checked + .burger .bar:nth-child(2) {
+  opacity: 0;
+}
+#check-menu:checked + .burger .bar:nth-child(3) {
+  margin-top: -30px;
+  transform: rotate(45deg);
 }
 
 .button {
@@ -625,6 +692,11 @@ template {
   font-weight: 400;
   line-height: 26px;
   margin-top: 15px;
+}
+.arcsIcons .dashes {
+  box-sizing: border-box;
+  border-top: 1px dotted #ffffff;
+  opacity: 0.5;
 }
 
 .articleL {
