--- a/scss/arcsIcons.scss
+++ b/scss/arcsIcons.scss
@@ -18,6 +18,7 @@
     flex-direction: column;
     flex: 1 1 30%;
     }
+   
     }
       .content_arcsIcons_row span{
       color: #e8e8e8;
@@ -28,4 +29,9 @@
       margin-top: 15px;
     }
   }
+  .dashes{
+      box-sizing: border-box;
+      border-top: 1px dotted #ffffff;
+      opacity: 0.5;
+    }
 }
