--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -1,18 +1,41 @@
 @import "fonts.scss";
+
+
+@media (max-width: 768px) { }
+@media (min-width: 576px) { }
 .menu{
 background-color: #5474fd;
 position: sticky;
 top: 0;
 z-index: 9999;
+  @media (max-width: 795px) {
+  .burger{
+    display: block;
+  }
+  .menu_list{
+  position: fixed;
+  top: 100px;
+  left: 50%;
+  width: 100%;
+  height: 50%;
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: #d6d6d1;
+  transition: all 0.5s ease 0s;
+  }
+  .menu_list a{
+    font-size: 25px;
+    line-height: 35px;
+  }
+}  
   .conteiner{
-    position: sticky;
-    top: 0;
     display: flex;
     flex-direction: row;
     align-content: center;
     justify-content: space-between;
-    padding: 33px;
-    
+    padding: 33px 33px 23px 33px;
     .namePage{
     color: #ffffff;
     font-family: $JSR;
@@ -21,17 +44,17 @@ z-index: 9999;
     line-height: 26px;
     }  
     .menu_list a{
-      color: #ffffff;
-      font-family: $Aleo;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 26px;
-      list-style: none;
-      padding-left: 42px;
-      text-decoration: none;
-      }  
-      .menu_list a:hover{
-      color:#e4fd54;
-      }
+    color: #ffffff;
+    font-family: $Aleo;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+    list-style: none;
+    padding-left: 42px;
+    text-decoration: none;
+    }  
+    .menu_list a:hover{
+    color:#e4fd54;
+    }
   }
 }
