--- a/.css/menu.css
+++ b/.css/menu.css
@@ -9,39 +9,6 @@
   z-index: 9999;
 }
 
-@media (max-width: 795px) {
-  .menu .burger {
-    display: block;
-  }
-  .menu .menu_list {
-    position: fixed;
-    top: 100px;
-    left: 50%;
-    width: 100%;
-    height: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    background-color: #d6d6d1;
-    -webkit-transition: all 0.5s ease 0s;
-    transition: all 0.5s ease 0s;
-  }
-  .menu .menu_list a {
-    font-size: 25px;
-    line-height: 35px;
-  }
-}
-
 .menu .conteiner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -79,4 +46,34 @@
 
 .menu .conteiner .menu_list a:hover {
   color: #e4fd54;
+}
+
+@media (max-width: 795px) {
+  .menu .conteiner .menu_list {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 82px;
+    right: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 30px 20px;
+    list-style: none;
+    text-align: center;
+    background-color: #5474fd;
+    -webkit-transition: 0.4s ease;
+    transition: 0.4s ease;
+  }
+  .menu .conteiner .menu_list a {
+    display: block;
+    font-size: 24px;
+    padding: 10px 25px;
+  }
+}
+
+@media (max-width: 795px) {
+  .menu .burger {
+    display: block;
+  }
 }
