--- a/.css/style.css
+++ b/.css/style.css
@@ -538,39 +538,6 @@ template {
   z-index: 9999;
 }
 
-@media (max-width: 795px) {
-  .menu .burger {
-    display: block;
-  }
-  .menu .menu_list {
-    position: fixed;
-    top: 100px;
-    left: 50%;
-    width: 100%;
-    height: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    background-color: #d6d6d1;
-    -webkit-transition: all 0.5s ease 0s;
-    transition: all 0.5s ease 0s;
-  }
-  .menu .menu_list a {
-    font-size: 25px;
-    line-height: 35px;
-  }
-}
-
 .menu .conteiner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -608,6 +575,44 @@ template {
 
 .menu .conteiner .menu_list a:hover {
   color: #e4fd54;
+}
+
+@media (max-width: 795px) {
+  .menu .conteiner .menu_list {
+    position: fixed;
+    top: 100px;
+    left: 50%;
+    width: 50%;
+    height: 25%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: #d6d6d1;
+    -webkit-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+  }
+  .menu .conteiner .menu_list a {
+    font-size: 35px;
+    line-height: 45px;
+    padding: 15px;
+    opacity: 1;
+  }
+}
+
+@media (max-width: 795px) {
+  .menu .burger {
+    display: block;
+  }
 }
 
 .burger {
