--- a/scss/burger.scss
+++ b/scss/burger.scss
@@ -6,8 +6,9 @@
   left: 90%;
   transform: translate(-50%, -50%);
   cursor: pointer;
-  transition: 0.3s ease;
+  transition: 0.4s ease;
   height: 50px;
+  z-index: 9999999;
   &:hover .bar {
     box-shadow: 1px 1px 7px 1px #000;
   }
@@ -26,7 +27,7 @@
 #check-menu {
   opacity: 0;
 }
-#check-menu:checked + .burger {
+#check-menu:checked ~ .burger {
   transform: translate(-50%,-50%) rotatey(180deg);
   .bar {
     transform: rotatey(180deg) rotatex(360deg);
@@ -42,6 +43,10 @@
       transform: rotate(45deg);
     }
   }
-
+  
 }
-
+#check-menu:checked ~.menu_list{
+  display: block;
+  visibility: visible;
+  right: 0;
+  }
