--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -8,28 +8,7 @@ background-color: #5474fd;
 position: sticky;
 top: 0;
 z-index: 9999;
-  @media (max-width: 795px) {
-  .burger{
-    display: block;
-  }
-  .menu_list{
-  position: fixed;
-  top: 100px;
-  left: 50%;
-  width: 100%;
-  height: 50%;
-  display:flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  background-color: #d6d6d1;
-  transition: all 0.5s ease 0s;
-  }
-  .menu_list a{
-    font-size: 25px;
-    line-height: 35px;
-  }
-}  
+
   .conteiner{
     display: flex;
     flex-direction: row;
@@ -56,5 +35,34 @@ z-index: 9999;
     .menu_list a:hover{
     color:#e4fd54;
     }
+      @media (max-width: 795px) {
+  .menu_list{
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 82px;
+  right: -100%; 
+  width: 300px;
+  height: 100%; 
+  margin: 0;
+  padding: 30px 20px;  
+  list-style: none;
+  text-align: center;
+  background-color: #5474fd;
+  transition: 0.4s ease;
   }
+  .menu_list a{
+  display: block;
+  font-size: 24px;
+  padding: 10px 25px;
+  }
+}  
+  }
+  @media (max-width: 795px) {
+  .burger{
+    display: block;
+  }
+
+  
+}
 }
