--- a/.css/BHROMAON.css
+++ b/.css/BHROMAON.css
@@ -2,11 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap");
 .BHROMAON {
-  background-image: url(../images/BHROMAON.png);
+  background: url(../images/BHROMAON.png) no-repeat center;
   height: 100%;
   background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
 }
 
@@ -71,7 +69,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 26px;
-  width: 500px;
+  min-width: 500px;
   min-height: 60px;
   border: none;
 }
@@ -105,8 +103,6 @@
 }
 
 .BHROMAON .conteiner .formBtn .button:hover {
-  width: 150px;
-  height: 62px;
   color: #000;
   background-color: #2e408d;
 }
@@ -128,4 +124,23 @@
 
 .BHROMAON .conteiner .scroll {
   margin-bottom: 160px;
+}
+
+@media (max-width: 700px) {
+  .formBtn {
+    margin: 0 20px;
+  }
+}
+
+@media (max-width: 560px) {
+  .search {
+    margin: 0 40px 0;
+    width: 300px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
 }
