--- a/.css/WhyChooseUs.css
+++ b/.css/WhyChooseUs.css
@@ -93,6 +93,22 @@
           flex: 1 1 50%;
 }
 
+@media (min-width: 320px) {
+  .WhyChooseUs .row_colums_WhyChooseUs .column2_WhyChooseUs .column2_WhyChooseUs {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .WhyChooseUs .row_colums_WhyChooseUs .column2_WhyChooseUs .cascad {
+    padding: 0;
+    margin: 0px 15px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
 .WhyChooseUs .row_colums_WhyChooseUs .column2_WhyChooseUs .IMGcolumn1 img {
   padding-right: 100px;
 }
