--- a/.css/arcsIcons.css
+++ b/.css/arcsIcons.css
@@ -19,8 +19,6 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
 }
 
 .arcsIcons .conteiner .content_arcsIcons_row .part {
@@ -38,8 +36,17 @@
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 30%;
-          flex: 1 1 30%;
+      -ms-flex: 1 1 25%;
+          flex: 1 1 25%;
+}
+
+@media (max-width: 575px) {
+  .arcsIcons .conteiner .content_arcsIcons_row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .arcsIcons .conteiner .content_arcsIcons_row span {
@@ -47,13 +54,5 @@
   font-family: "Aleo";
   font-size: 36px;
   font-weight: 400;
-  line-height: 26px;
   margin-top: 15px;
-}
-
-.arcsIcons .dashes {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-top: 1px dotted #ffffff;
-  opacity: 0.5;
 }
