--- a/.css/articleL.css
+++ b/.css/articleL.css
@@ -14,10 +14,23 @@
   padding: 230px 0px 100px 30px;
 }
 
+@media (max-width: 350px) {
+  .articleL .conteiner {
+    padding: 230px 0px 100px 15px;
+  }
+}
+
 .articleL .conteiner .content_row_articleL {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (max-width: 575px) {
+  .articleL .conteiner .content_row_articleL {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .articleL .conteiner .content_row_articleL .emptiness_articleL {
@@ -35,6 +48,18 @@
   padding: 30px;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
+}
+
+@media (max-width: 575px) {
+  .articleL .conteiner .content_row_articleL .explain_articleL {
+    margin: 0 30px 0 0;
+  }
+}
+
+@media (min-width: 319px) {
+  .articleL .conteiner .content_row_articleL .explain_articleL {
+    margin: 0 45px 0 0;
+  }
 }
 
 .articleL .conteiner .content_row_articleL .explain_articleL .subtitle_articleL {
