--- a/.css/menu.css
+++ b/.css/menu.css
@@ -33,13 +33,16 @@
   line-height: 26px;
 }
 
+.menu .conteiner .menu_list {
+  margin-top: -20px;
+}
+
 .menu .conteiner .menu_list a {
   color: #ffffff;
   font-family: "Aleo";
   font-size: 14px;
   font-weight: 400;
   line-height: 26px;
-  list-style: none;
   padding-left: 42px;
   text-decoration: none;
 }
@@ -61,7 +64,7 @@
     padding: 30px 20px;
     list-style: none;
     text-align: center;
-    background-color: #5474fd;
+    background-color: #425ac9ea;
     -webkit-transition: 0.4s ease;
     transition: 0.4s ease;
   }
