--- a/.css/style.css
+++ b/.css/style.css
@@ -402,11 +402,9 @@ template {
 }
 
 .BHROMAON {
-  background-image: url(../images/BHROMAON.png);
+  background: url(../images/BHROMAON.png) no-repeat center;
   height: 100%;
   background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
 }
 
@@ -464,7 +462,7 @@ template {
       flex-wrap: wrap;
 }
 
-.BHROMAON .conteiner .formBtn .search .search_form {
+.BHROMAON .conteiner .formBtn .search_form {
   text-align: center;
   font-family: "Josefin Sans";
   color: #999999;
@@ -530,6 +528,19 @@ template {
   margin-bottom: 160px;
 }
 
+@media (max-width: 700px) {
+  .formBtn {
+    margin: 0 20px;
+  }
+}
+
+@media (max-width: 560px) {
+  .search_form {
+    margin: 0 20px;
+    width: 450px;
+  }
+}
+
 .menu {
   background-color: #5474fd;
   position: -webkit-sticky;
@@ -562,13 +573,16 @@ template {
   line-height: 26px;
 }
 
+.menu .conteiner .menu_list {
+  margin-top: -20px;
+}
+
 .menu .conteiner .menu_list a {
   color: #ffffff;
   font-family: "Aleo";
   font-size: 14px;
   font-weight: 400;
   line-height: 26px;
-  list-style: none;
   padding-left: 42px;
   text-decoration: none;
 }
@@ -579,33 +593,25 @@ template {
 
 @media (max-width: 795px) {
   .menu .conteiner .menu_list {
+    display: block;
     position: fixed;
-    top: 100px;
-    left: 50%;
-    width: 50%;
-    height: 25%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background-color: #d6d6d1;
-    -webkit-transition: all 0.5s ease 0s;
-    transition: all 0.5s ease 0s;
+    visibility: hidden;
+    top: 82px;
+    right: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 30px 20px;
+    list-style: none;
+    text-align: center;
+    background-color: #425ac9ea;
+    -webkit-transition: 0.4s ease;
+    transition: 0.4s ease;
   }
   .menu .conteiner .menu_list a {
-    font-size: 35px;
-    line-height: 45px;
-    padding: 15px;
-    opacity: 1;
+    display: block;
+    font-size: 24px;
+    padding: 10px 25px;
   }
 }
 
@@ -623,9 +629,10 @@ template {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   cursor: pointer;
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
   height: 50px;
+  z-index: 9999999;
 }
 
 .burger:hover .bar {
@@ -652,30 +659,36 @@ template {
   opacity: 0;
 }
 
-#check-menu:checked + .burger {
+#check-menu:checked ~ .burger {
   -webkit-transform: translate(-50%, -50%) rotatey(180deg);
           transform: translate(-50%, -50%) rotatey(180deg);
 }
 
-#check-menu:checked + .burger .bar {
+#check-menu:checked ~ .burger .bar {
   -webkit-transform: rotatey(180deg) rotatex(360deg);
           transform: rotatey(180deg) rotatex(360deg);
 }
 
-#check-menu:checked + .burger .bar:first-child {
+#check-menu:checked ~ .burger .bar:first-child {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
   margin-top: 20px;
 }
 
-#check-menu:checked + .burger .bar:nth-child(2) {
+#check-menu:checked ~ .burger .bar:nth-child(2) {
   opacity: 0;
 }
 
-#check-menu:checked + .burger .bar:nth-child(3) {
+#check-menu:checked ~ .burger .bar:nth-child(3) {
   margin-top: -30px;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
+}
+
+#check-menu:checked ~ .menu_list {
+  display: block;
+  visibility: visible;
+  right: 0;
 }
 
 .button {
@@ -767,6 +780,22 @@ template {
           flex: 1 1 50%;
 }
 
+@media (min-width: 320px) {
+  .WhyChooseUs .row_colums_WhyChooseUs .column2_WhyChooseUs .column2_WhyChooseUs {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .WhyChooseUs .row_colums_WhyChooseUs .column2_WhyChooseUs .cascad {
+    padding: 0;
+    margin: 0px 15px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
 .WhyChooseUs .row_colums_WhyChooseUs .column2_WhyChooseUs .IMGcolumn1 img {
   padding-right: 100px;
 }
@@ -793,8 +822,6 @@ template {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
 }
 
 .arcsIcons .conteiner .content_arcsIcons_row .part {
@@ -812,8 +839,17 @@ template {
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 30%;
-          flex: 1 1 30%;
+      -ms-flex: 1 1 25%;
+          flex: 1 1 25%;
+}
+
+@media (max-width: 575px) {
+  .arcsIcons .conteiner .content_arcsIcons_row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .arcsIcons .conteiner .content_arcsIcons_row span {
@@ -821,15 +857,7 @@ template {
   font-family: "Aleo";
   font-size: 36px;
   font-weight: 400;
-  line-height: 26px;
   margin-top: 15px;
-}
-
-.arcsIcons .dashes {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-top: 1px dotted #ffffff;
-  opacity: 0.5;
 }
 
 .articleL {
@@ -845,10 +873,23 @@ template {
   padding: 230px 0px 100px 30px;
 }
 
+@media (max-width: 350px) {
+  .articleL .conteiner {
+    padding: 230px 0px 100px 15px;
+  }
+}
+
 .articleL .conteiner .content_row_articleL {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (max-width: 575px) {
+  .articleL .conteiner .content_row_articleL {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .articleL .conteiner .content_row_articleL .emptiness_articleL {
@@ -866,6 +907,18 @@ template {
   padding: 30px;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
+}
+
+@media (max-width: 575px) {
+  .articleL .conteiner .content_row_articleL .explain_articleL {
+    margin: 0 30px 0 0;
+  }
+}
+
+@media (min-width: 319px) {
+  .articleL .conteiner .content_row_articleL .explain_articleL {
+    margin: 0 45px 0 0;
+  }
 }
 
 .articleL .conteiner .content_row_articleL .explain_articleL .subtitle_articleL {
@@ -956,6 +1009,22 @@ template {
   line-height: 26px;
 }
 
+@media (max-width: 575px) {
+  .articleR .conteiner .content_row_articleR {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .articleR .conteiner .content_row_articleR .explain_articleR {
+    margin: 0 0 0 30px;
+  }
+}
+
+@media (min-width: 319px) {
+  .articleR .conteiner .content_row_articleR .explain_articleR {
+    margin: 0 15px 0 15px;
+  }
+}
+
 .whatOurTouristSay {
   background-image: url(../images/whatOurTouristSay.png);
   background-size: cover;
@@ -963,7 +1032,7 @@ template {
 }
 
 .whatOurTouristSay .conteiner {
-  padding: 0 30px;
+  padding: 0 45px;
 }
 
 .whatOurTouristSay .conteiner .title_whatOurTouristSay {
@@ -980,6 +1049,13 @@ template {
   display: flex;
 }
 
+@media (max-width: 992px) {
+  .whatOurTouristSay .conteiner .columns_whatOurTouristSay {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column1_whatOurTouristSay {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 40%;
@@ -989,6 +1065,8 @@ template {
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column1_whatOurTouristSay img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column2_whatOurTouristSay {
@@ -997,6 +1075,12 @@ template {
           flex: 1 1 60%;
   background: #333;
   padding: 50px 60px;
+}
+
+@media (min-width: 320px) {
+  .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column2_whatOurTouristSay {
+    padding: 30px;
+  }
 }
 
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column2_whatOurTouristSay .subtitle_whatOurTouristSay {
@@ -1052,8 +1136,13 @@ template {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.socialLinks .conteiner .social_links :not(:last-child) {
+  padding-right: 25px;
 }
 
 .socialLinks .conteiner .logo a svg:hover #facebook,
@@ -1065,6 +1154,7 @@ template {
 }
 
 .conteiner {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
+  min-width: 319px;
 }
