--- a/.css/whatOurTouristSay.css
+++ b/.css/whatOurTouristSay.css
@@ -8,7 +8,7 @@
 }
 
 .whatOurTouristSay .conteiner {
-  padding: 0 30px;
+  padding: 0 45px;
 }
 
 .whatOurTouristSay .conteiner .title_whatOurTouristSay {
@@ -25,6 +25,13 @@
   display: flex;
 }
 
+@media (max-width: 992px) {
+  .whatOurTouristSay .conteiner .columns_whatOurTouristSay {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column1_whatOurTouristSay {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 40%;
@@ -34,6 +41,8 @@
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column1_whatOurTouristSay img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column2_whatOurTouristSay {
@@ -42,6 +51,12 @@
           flex: 1 1 60%;
   background: #333;
   padding: 50px 60px;
+}
+
+@media (min-width: 320px) {
+  .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column2_whatOurTouristSay {
+    padding: 30px;
+  }
 }
 
 .whatOurTouristSay .conteiner .columns_whatOurTouristSay .column2_whatOurTouristSay .subtitle_whatOurTouristSay {
