--- a/scss/BHROMAON.scss
+++ b/scss/BHROMAON.scss
@@ -5,11 +5,9 @@
 @media (min-width: 576px) { }
 
 .BHROMAON{
-background-image: url(../images/BHROMAON.png);
+background: url(../images/BHROMAON.png) no-repeat center;
 height: 100%;
 background-attachment: fixed;
-background-position: center;
-background-repeat: no-repeat;
 background-size: cover;
   .conteiner{
     display: flex;
@@ -40,19 +38,22 @@ background-size: cover;
         align-items:center;
         flex-direction: row;
         flex-wrap: wrap;
-      .search{ 
-        .search_form{
+        .search{
+
+          .search_form{
         text-align: center;
         font-family:$JSR;
         color: #999999;
         font-size: 14px;
         font-weight: 400;
         line-height: 26px;
-        width: 500px;
+        min-width: 500px;
         min-height: 60px;
         border:none;
-      }
-    }
+        }
+        }
+        
+
     .button_BHROMAON{
       display: flex;
       justify-content: center;
@@ -71,8 +72,6 @@ background-size: cover;
       }
       .s{margin-right: 10px;}
       .button:hover{
-      width: 150px;
-      height: 62px;
       color:#000;
       background-color: #2e408d;
       }
@@ -95,5 +94,16 @@ background-size: cover;
     }
   }
 }
-
-
+@media (max-width: 700px){
+.formBtn{
+  margin: 0 20px;
+}
+}
+@media (max-width: 560px){
+.search{
+  margin: 0 40px 0;
+  width: 300px;
+  display: flex;
+  justify-content: flex-start;
+}
+}
