--- a/scss/arcsIcons.scss
+++ b/scss/arcsIcons.scss
@@ -10,28 +10,29 @@
     .content_arcsIcons_row{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+ 
     .part{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    flex: 1 1 30%;
+    flex: 1 1 25%;
     }
-   
+      @media (max-width: 575px) {
+      flex-direction: column;
+      
+    }
+    
     }
       .content_arcsIcons_row span{
       color: #e8e8e8;
       font-family: $Aleo;
       font-size: 36px;
       font-weight: 400;
-      line-height: 26px;
       margin-top: 15px;
     }
+    
+
   }
-  .dashes{
-      box-sizing: border-box;
-      border-top: 1px dotted #ffffff;
-      opacity: 0.5;
-    }
+
 }
