--- a/scss/articleL.scss
+++ b/scss/articleL.scss
@@ -8,9 +8,15 @@ background-repeat: no-repeat;
 background-size: cover;
   .conteiner{
     padding: 230px 0px 100px 30px;
+    @media (max-width: 350px){
+      padding: 230px 0px 100px 15px;
+        }
         .content_row_articleL{
         display: flex;
-        .emptiness_articleL{
+      @media (max-width: 575px) {
+      flex-wrap: wrap;
+    }
+    .emptiness_articleL{
         flex: 1 1 50%;
         }
         .explain_articleL{
@@ -19,6 +25,12 @@ background-size: cover;
         opacity: 0.9;
         padding:30px;
         box-sizing: content-box;
+        @media (max-width: 575px){
+          margin: 0 30px 0 0 ;
+        }
+        @media (min-width: 319px){
+          margin: 0 45px 0 0 ;
+        }
         .subtitle_articleL{
         color: #e8e8e8;
         font-family: $JSR;
