--- a/scss/articleR.scss
+++ b/scss/articleR.scss
@@ -43,6 +43,17 @@ background-size: cover;
         line-height: 26px;
         }
       }
+      @media (max-width: 575px) {
+      flex-wrap: wrap;
+      .explain_articleR{
+        margin: 0 0 0 30px;
+      }
+    }
+    @media (min-width: 319px) {
+      .explain_articleR{
+        margin: 0 15px 0 15px;
+      }
+    }
     }
   }
 }
